fix: misalignment of content between page transitions due to scrollbar

--- a/assets/main.css
+++ b/assets/main.css
@@ -10,6 +10,10 @@ dl, dd, ol, ul, figure {
 /**
  * Basic styling
  */
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #111;
@@ -23,6 +27,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 /**
